--- a/templates/email/example.html
+++ b/templates/email/example.html
@@ -7,7 +7,8 @@
     <title>Memorendum by Syndicus</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Times New Roman', sans-serif;
+            line-height: 1.5;
         }
 
         .container {
@@ -16,7 +17,7 @@
         }
 
         .heading {
-            font-size: 16px;
+            font-size: 14px;
             font-weight: 600;
             margin-bottom: 10px;
         }
