--- a/templates/brief_argument/step_2.html
+++ b/templates/brief_argument/step_2.html
@@ -3,60 +3,60 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Step 1</title>
+    <meta name="viewport" content="width='device-width', initial-scale=1.0">
+    <!-- Include the Quill library -->
+    <link href="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.snow.css" rel="stylesheet" />
+    <title>Step 2</title>
 </head>
 
 <body>
     <div id="app">
-        <h1>Step 1</h1>
-        <label for="research_input">Input 1:</label>
-        <input type="text" id="research_input" name="research_input" value="{{ research_input }}" ref="research_input"
-            readonly>
-        <button @click="copyText('research_input')">Copy</button>
+        <h1>Step 2</h1>
+        <label for="input_1">INPUT:</label>
+        <input type="text" id="input_1" name="input_1" value="{{ input_1 }}" ref="input_1" readonly>
+        <button @click="copyText('input_1')">Copy</button>
         <br>
         <br>
         <br>
-        <label for="reseach_output">OUTPUT</label>
-        <input type="text" id="reseach_output" name="reseach_output" v-model="reseachOutput">
+        <label for="counsel_output_2">OUTPUT</label>
         <br>
         <input type="submit" value="Submit" @click="pasteAndSubmit">
+    </div>
+    <div id="editor">
     </div>
 </body>
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.js"></script>
 <script>
     const { createApp, ref, toRefs } = Vue;
     const csrftoken = '{{ csrf_token }}';
+    const quill = new Quill('#editor', {
+        theme: 'snow'
+    });
     createApp({
         setup() {
             const url = window.location.href;
             const uuid = window.location.href.split('/');
-            const research_input = ref(null);
-            const reseachOutput = ref('');
+            const input_1 = ref(null);
+            const counsel_output_2 = ref('');
             const copyText = (value) => {
                 switch (value) {
-                    case 'research_input':
-                        research_input.value.select();
+                    case 'input_1':
+                        input_1.value.select();
                         document.execCommand('copy');
                         break;
                     default:
                         console.log('Invalid value');
                 }
             };
-            const pasteAndSubmit = () => {
-                const textarea = document.getElementById('reseach_output');
-                const regex = /(\d+\.\d+)\s+([^(]+)\s*(\([^)]+\))?/g;
-                const matches = textarea.value.matchAll(regex);
-                relevantTopicList = [];
-                for (const match of matches) {
-                    const [full, number, text, parentheses] = match;
-                    const value = `${text}${parentheses || ''}`;
-                    relevantTopicList.push(value);
-                }
-                axios.post('/api/brief_arguments/', {
-                    research_output: relevantTopicList,
-                    case_id: uuid[4],
+            const pasteAndSubmit = async () => {
+                var html = quill.root.innerHTML;
+                console.log('What is rich test::', html)
+                const textarea = document.getElementById('counsel_output_2');
+                axios.put('/api/brief_arguments/' + uuid[4] + "/", {
+                    counsel_output: html,
+                    brief_id: uuid[4],
                 }, {
                     headers: {
                         'X-CSRFToken': csrftoken
@@ -69,14 +69,13 @@
                     console.error(error);
                 });
             };
-
             return {
                 ...toRefs({
                     copyText,
                     pasteAndSubmit,
                 }),
-                reseachOutput,
-                research_input,
+                input_1,
+                counsel_output_2,
             };
         },
     }).mount('#app');
