--- a/templates/brief_argument/main_page.html
+++ b/templates/brief_argument/main_page.html
@@ -163,6 +163,14 @@
                                     Generate Memo
                                 </button>
                             </div>
+                            <br>
+                            <div class="flex flex-col sm:flex-row justify-start">
+                                <a
+                                    href="{% url 'brief_argument:aib_exam' %}"
+                                    class="flex items-center justify-center text-l text-[#1C175C] rounded-full px-6 py-3 mr-4 mb-4 sm:mb-0 border border-solid border-[#1C175C]">
+                                    AIB
+                                </a>
+                            </div>
                         </div>
                     </div>
 
