--- a/templates/email/legal_memo_detailed.html
+++ b/templates/email/legal_memo_detailed.html
@@ -102,6 +102,9 @@
         <p>{{conclusion|safe}}
         </p>
     </div>
+    LEGAL MEMORANDUM: 
+    <!-- <a href="{% url 'brief_argument:legal_memo_fe' id %}">LEGAL MEMO FE</a> -->
+    <a href="http://{{ domain_name }}:8000{% url 'brief_argument:legal_memo_fe' id %}">Click Here.</a>
 </body>
 
 </html>
