Added the new cocounsel step

--- a/templates/brief_argument/step_2.html
+++ b/templates/brief_argument/step_2.html
@@ -19,6 +19,7 @@
         <br>
         <br>
         <label for="counsel_output_2">OUTPUT</label>
+        <!-- <input type="text" id="counsel_output_2" name="counsel_output_2" v-model="counsel_output_2"> -->
         <br>
         <input type="submit" value="Submit" @click="pasteAndSubmit">
     </div>
