--- a/templates/email/legal_memo_detailed.html
+++ b/templates/email/legal_memo_detailed.html
@@ -85,7 +85,7 @@
         <h3>{{ anal.title|safe }}</h3>
         <br>
         <p></p>
-        {{ anal.detailed_content|safe }}
+        {{ anal.final_legal_text|safe }}
         <p></p>
         {% endfor %}
         </p>
