--- a/templates/brief_argument/main_page.html
+++ b/templates/brief_argument/main_page.html
@@ -46,7 +46,7 @@
                     </div>
                 </div>
             </div>
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-10">
+            <div class="grid grid-cols-1 w-full gap-8 mt-10">
                 <div class="casefacts">
                     <h1 class="text-lg sm:text-xl md:text-2xl font-regular text-black mb-4 relative">
                         <span class="relative block">
@@ -60,12 +60,6 @@
                                 Reports, charge sheets, witness statements, and post-mortem reports.</h2>
                         </span>
                     </h1>
-                    <!-- <div class="mb-4">
-                    <label for="factsFiles" class="sr-only">Choose files</label>
-                    <input type="file" name="factsFiles" id="factsFiles" multiple
-                      class="block w-full border border-gray-200 shadow-sm rounded-lg text-sm focus:z-10 focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none file:bg-gray-50 file:border-0 file:me-4 file:py-3 file:px-4"
-                      accept=".pdf" />
-                  </div> -->
                     <div class="flex flex-col relative">
                         <div class="w-full">
                             <textarea name="caseFacts" ref="caseFactsRef"
@@ -79,7 +73,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="legalresearch">
+                <!-- <div class="legalresearch">
                     <h1 class="text-lg sm:text-xl md:text-2xl font-regular text-black mb-4 relative">
                         <span class="relative block">
                             <h2 class="text-zinc-700 text-sm" style="font-family: Inter, sans-serif">LEGAL RESEARCH</h2>
@@ -91,12 +85,12 @@
                             </h2>
                         </span>
                     </h1>
-                    <!-- <div class="mb-4">
+                    <div class="mb-4">
                     <label for="researchFiles" class="sr-only">Choose files</label>
                     <input type="file" name="researchFiles" id="researchFiles" multiple
                       class="block w-full border border-gray-200 shadow-sm rounded-lg text-sm focus:z-10 focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none file:bg-gray-50 file:border-0 file:me-4 file:py-3 file:px-4"
                       accept=".pdf" />
-                  </div> -->
+                  </div>
                     <div class="flex flex-col relative">
                         <div class="w-full">
                             <textarea name="legalResearch" ref="legalResearchRef"
@@ -109,7 +103,7 @@
                             [[ LegalResearchswordCount ]]/25000
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="flex justify-center mt-6">
                 <button class="bg-[#050142] text-[#C3E2EF] px-6 py-3 rounded-full text-l"
@@ -200,6 +194,7 @@
                         fact_case: caseDetail.value.fact_case,
                         legal_issue: caseDetail.value.legal_issue,
                         legal_research: caseDetail.value.legal_research,
+                        unique_id: 0,
                     };
                     axios.post('/api/casehistories/', requestData, {
                         headers: {
