Fixed the case-reference in cocounsel

--- a/templates/email/aib_email.html
+++ b/templates/email/aib_email.html
@@ -47,9 +47,7 @@
 </head>
 
 <body>
-    <div class="container">
-        {{ string|safe }}
-    </div>
+    This is working correctly.
 </body>
 
 </html>
